<resources>
    <string name="app_name">yangyi1-FeelsBook</string>
    <string name="history_tab">History</string>
    <string name="buttontext_joy">Joy</string>
    <string name="buttontext_love">Love</string>
    <string name="buttontext_surprise">Surprise</string>
    <string name="buttontext_anger">Anger</string>
    <string name="buttontext_sadness">Sadness</string>
    <string name="buttontext_fear">Fear</string>
    <string name="apptext_description">EMOTION TRACKER</string>
    <string name="buttontext_history">History</string>
    <string name="buttontext_frequency">Frequency</string>
    <string name="comment_prompt">Optional Comment</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_frequency">Frequency</string>
    <string name="title_activity_edit_emotion">EditEmotionActivity</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save_changes">Save</string>
    <string name="cancel_changes">Cancel</string>
</resources>
